# podruff-site

./: .gitignore  BACKLOG.md  CLAUDE.md  index.html
social-engine/: pyproject.toml  social_apis.py  social_bgraphic.py  social_body_renderer.py  social_config.json  social_config.py  social_copywriter.py  social_generate_cli.py  social_image_gen.py  social_notion.py  social_onboard_client.py  social_poller.py  social_provisioner.py  social_quotecard.py  social_upload.py  social_youtube_transcript.py
social-engine/social_prompts/: copywriting.md  hooks.md  platforms.md
social-engine/tests/: test_social_apis.py  test_social_bgraphic.py  test_social_body_renderer.py  test_social_config.py  test_social_copywriter.py  test_social_notion.py  test_social_poller.py  test_social_provisioner.py
video-pipeline/: .env.example  .gitignore  BACKLOG.md.bak  pyproject.toml  smoke_test.py  test_pipeline.py  video_pipeline_v2.py
video-pipeline/launchd/: com.crowdtamers.video-poll.plist
video-pipeline/pipeline/: branding.py  cli.py  client_config.py  config.py  drive.py  drive_poller.py  editor.py  editorial.py  editorial_config.py  edl.py  fcp7.py  headlines.py  hooks.py  ingest.py  llm.py  mlt.py  notify.py  notion_board.py  poller.py  publisher.py  retry.py  segment.py  storage.py  thumbnails.py  timestamp.py  transcribe.py  transcript_repair.py  validation.py
video-pipeline/scripts/: R2_LIFECYCLE_CONFIG.md  configure_r2_lifecycle.py  ingest_client_logos.py  install-video-poll-launchd.sh  rerender_jb_from_kdenlive.py
video-pipeline/tests/: test_branding.py  test_drive.py  (+22 more)
(+189 files in other folders)
